--- a/index.html
+++ b/index.html
@@ -15,18 +15,10 @@
     <title>Frontend Mentor | Base Apparel coming soon page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <style></style>
   </head>
   <body>
-    <header class="header">
+    <header class="header p-8">
       <a href="index.html" aria-label="Return to homepage"
         ><img src="img/logo.svg" alt="Base apparel logo" class="header__logo"
       /></a>
@@ -37,36 +29,45 @@
           <source media="(min-width: )" srcset="" />
           <img src="img/hero-mobile.jpg" alt="" class="hero__img" />
         </picture>
-        <div class="hero__content">
-          <h1 class="heading--primary">We're coming soon</h1>
-          <p class="hero__description">
+
+        <div class="hero__content pt-16 px-8 text-center">
+          <h1 class="heading-primary">We're <span>coming soon</span></h1>
+          <p class="hero__description my-8">
             Hello fellow shoppers! We're currently building our new fashion
             store. Add your email below to stay up-to-date with announcements
             and our launch deals.
           </p>
-        </div>
-        <form class="hero__form">
-          <div class="hero__form-group">
-            <label for="email">Email Address</label>
-            <input type="email" id="email" name="email" required />
-            <img src="img/icon-error.svg" alt="" />
+
+          <form class="hero__form">
+            <label for="email"
+              ><span class="sr-only">Email Address</span></label
+            >
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Email Address"
+              required
+              class="hero__form-input"
+            />
+            <img src="img/icon-error.svg" alt="" class="hero__error-icon" />
             <button class="btn btn--primary" aria-label="Submit">
               <img src="img/icon-arrow.svg" alt="" />
             </button>
-            <p class="hero__error-message hidden">
+            <p class="hero__error-message hidden mt-2">
               Please provide a valid email
             </p>
-          </div>
-        </form>
+          </form>
+        </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="mt-16">
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Nkwor Uche Precious</a>.
       </p>
     </footer>
   </body>
